poidet rabotaet nemnoga

--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -1,20 +1,20 @@
 @model Cart
 
-<h2>Your cart</h2>
+<h2>Корзина</h2>
 <table class="table table-bordered table-striped">
     <thead>
         <tr>
-            <th>Quantity</th>
-            <th>Item</th>
-            <th class="text-right">Price</th>
-            <th class="text-right">Subtotal</th>
+            <th>Товар</th>            
+            <th>Количество</th>
+            <th class="text-right">Цена</th>
+            <th class="text-right">Итог</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var line in Model.Lines) {
         <tr>
-            <td class="text-center">@line.Quantity</td>
             <td class="text-left">@line.Good.Name</td>
+            <td class="text-center">@line.Quantity</td>
             <td class="text-right">@line.Good.Price.ToString("c")</td>
             <td class="text-right">
                 @((line.Quantity * line.Good.Price).ToString("c"))
@@ -24,10 +24,12 @@
     </tbody>
     <tfoot>
         <tr>
-            <td colspan="3" class="text-right">Total:</td>
+            <td colspan="3" class="text-right">Итог:</td>
             <td class="text-right">
                 @Model.ComputeTotalValue().ToString("c")
             </td>
         </tr>
     </tfoot>
 </table>
+
+<div class="col-sm-12"><a asp-controller="Checkout" asp-action="Index">Checkout</a></div>
