--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,29 +1,32 @@
 ﻿
 @model IEnumerable<Good>
 
-@{
-    Layout=null;
-}
-
 <html>
     <head>
-
- <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
  <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-grid.min.css" />
         
     </head>
     <body>
-        <h2>Goods</h2>
+        
         <div class="container">
             <div class="row">
-                <div class="col-sm-2">sfasf</div>
+                
+                <div class="col-sm-2">
+                    <h2>Товары</h2>
+                </div>
+
+                 
 
             <div class="col-sm-10">
+               
             @foreach(var w in Model)
             {
                 @Html.Partial("ProductSummary", w);
             }
+             <a asp-controller="Cart" asp-action="Index">Checkout</a>
         </div>
+       
+
             </div>
         </div>
     </body>
