--- a/Views/Shared/ProductSummary.cshtml
+++ b/Views/Shared/ProductSummary.cshtml
@@ -3,13 +3,16 @@
     <h3>@Model.Name</h3>
     <form id="@Model.GoodId" asp-action="AddToCart" asp-controller="Cart" method="post">
         <input type="hidden" asp-for="GoodId" />
-        <img src="@Model.ImgPath" width="100" height="100"/>
+        <img src="@Model.ImgPath" width="200" height="200"/>
         <span class="card-text p-1">
             @Model.Description
+
             <button type="submit" class="btn btn-success btn-sm pull-right" style="float:right">
                 Add To Cart
             </button>
+            <h2 class="pull-right">@Model.Price</h2>
             
         </span>
         <hr>   
     </form>
+    
