--- a/Views/Checkout/Credintals.cshtml
+++ b/Views/Checkout/Credintals.cshtml
@@ -1,14 +1,20 @@
 @model Client
 
-<form asp-action="Success" asp-controller="Checkout">
-    <label>Email</label>
-    <input asp-for="Email" type="email">
-    <br>
+
+
+    <form asp-action="Credintals" asp-controller="Checkout">
+  <div class="form-group">
+    <label asp-for="Email">Email адрес</label>
+    <input type="email" class="form-control" asp-for="Email" aria-describedby="emailHelp" placeholder="Enter email">
+  </div>
+  <div class="form-group">
     <label>Имя</label>
-    <input asp-for="Name" type="text">
-    <br>
+    <input class="form-control" placeholder="Введите Имя" asp-for="Name" type="text">
+</div>
+<div class="form-group">
     <label>Адрес доставки</label>
-    <input asp-for="Adress" type="text">
-    <br>
-    <input class="btn" type="submit" value="Подтвердить">
+    <input class="form-control" placeholder="Адрес доставки" asp-for="Adress" type="text">
+</div>
+
+  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
