--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,33 +1,23 @@
-﻿
-@model IEnumerable<Good>
+﻿ @model IEnumerable<Good>
 
-<html>
+    <html>
     <head>
- <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-grid.min.css" />
-        
     </head>
     <body>
-        
+   
         <div class="container">
             <div class="row">
-                
-                <div class="col-sm-2">
-                    <h2>Товары</h2>
-                </div>
-
-                 
-
-            <div class="col-sm-10">
                
-            @foreach(var w in Model)
-            {
-                @Html.Partial("ProductSummary", w);
-            }
-             <a asp-controller="Cart" asp-action="Index">Checkout</a>
-        </div>
-       
+                <div class="col-sm-12">
+                       
+                    @foreach(var p in Model) 
+                    {                      
+                        @Html.Partial("ProductSummary",p);
+                    }
+               
 
+                </div>
             </div>
-        </div>
     </body>
-</html>
+
+    </html>
