--- a/Views/Shared/ProductSummary.cshtml
+++ b/Views/Shared/ProductSummary.cshtml
@@ -1,18 +1,28 @@
 @model Good
 
-    <h3>@Model.Name</h3>
-    <form id="@Model.GoodId" asp-action="AddToCart" asp-controller="Cart" method="post">
-        <input type="hidden" asp-for="GoodId" />
-        <img src="@Model.ImgPath" width="200" height="200"/>
-        <span class="card-text p-1">
-            @Model.Description
+    <div class="card bg-white border-primary " style="margin:5px" >
+        <div class="card-body">
 
-            <button type="submit" class="btn btn-success btn-sm pull-right" style="float:right">
-                Add To Cart
-            </button>
-            <h2 class="pull-right">@Model.Price</h2>
-            
-        </span>
-        <hr>   
-    </form>
+            <h3 class="card-title text-primary">@Model.Name
+                      <small class="badge-pill badge-warning" style="float:right; margin-top:7px" >@Model.Price.ToString("c")</small>
+                      <hr>
+              
+            </h3>
+            <h6 class="card-subtitle">
+                    @Model.Description
+            </h6>
+           <div>
+               
+               <form id="@Model.GoodId" method="post" asp-for="Good" asp-controller="Cart" asp-action="AddToCart">
+                   <input type="hidden" asp-for="GoodId" >
+                <button class="btn btn-primary" style="float:right">
+                    Добавить в корзину
+                </button>
+                </form>
+           </div>
+
+        </div>
+    </div>
+  
+
     
