Заебись версия с адменкой

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Authorization
+@inject IAuthorizationService AuthorizationService
+
+<!DOCTYPE html>
+
 <html>
 <head>
     <meta charset="utf-8" />
@@ -29,11 +33,13 @@
       
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+        <a class="nav-link" asp-controller="Admin" asp-action="Index">Управление</a>
       </li>
       <li class="nav-item">
           <a asp-controller="cart" class="nav-link" style="float:right" asp-action="index">Корзина</a>
       </li>
+
+
     </ul>
    
   </div>
@@ -42,12 +48,11 @@
 
 
         <div class="row" >
-        <div id="categories" class="col-md-3"> 
-      
-        </div>
-        <div class="col-md-8">
+          <div class="col-md-1"></div>
+        <div class="col-md-10">
     @RenderBody()
     </div>
+    <div class="col-md-1"></div>
     </div>
 </body>
 </html>
