--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,9 +1,9 @@
-@model Login
+@model LoginModel
 
-    <form asp-action="Login" asp-controller="Login" method="post">
+    <form asp-action="Login" asp-controller="Account" method="post">
   <div class="form-group">
-    <label asp-for="User">Username</label>
-    <input type="text" class="form-control" asp-for="User" aria-describedby="emailHelp" placeholder="Enter username">
+    <label asp-for="Email">Email</label>
+    <input type="text" class="form-control" asp-for="Email" aria-describedby="emailHelp" placeholder="Enter Email">
   </div>
   <div class="form-group">
     <label>Password</label>
