--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -1,7 +1,7 @@
 @model Cart
 
 <h2>Корзина</h2>
-<table class="table table-bordered table-striped">
+<table class="table table-bordered table-striped col-md-12" >
     <thead>
         <tr>
             <th>Товар</th>            
