Рабочая версия с добавлением и удалением товаров

--- a/Views/Admin/Orders.cshtml
+++ b/Views/Admin/Orders.cshtml
@@ -8,20 +8,46 @@
     
 
     <div class="col-md-9">
-    @foreach(var t in @Model)
-    {
-        <h3>@t.Client.Name</h3>
-        @t.Client.Email
-        <br>
-        @foreach (var item in t.Goods)
-        {
-            <h4>@item.Name
-            @t.Client.ClientGood.Where(w=>w.Good == item).FirstOrDefault().Quantity;
-            </h4>
-            <br>
-        }
-        <hr>
-    }
+    <br>
+    <table class="table table-bordered table-striped col-md-12">
+        <thead>
+            <tr>
+            <th>Имя</th>            
+            <th>Почта</th>
+            <th>Адрес доставки</th>
+            <th >Товары</th>
+        </tr>
+        </thead>
+        <tbody>
+            @foreach(var t in @Model)
+            {
+                <tr>
+                    <td>
+                        @t.Client.Name
+                    </td>
+                    <td>
+                        @t.Client.Email
+                    </td>
+                    <td>
+                        @t.Client.Adress
+                    </td>
+                    <td>
+                    @foreach (var item in t.Goods)
+                    {   
+                        <div>@item.Name
+                         @t.Client.ClientGood.Where(w=>w.Good == item).FirstOrDefault().Quantity
+                        </div>
+                         
+                         
+                     }
+                    </td>
+                </tr>
+            }
+
+        </tbody>
+
+    </table>
+   
     </div>
     </div>
 </div>
