--- a/Views/Admin/AddGood.cshtml
+++ b/Views/Admin/AddGood.cshtml
@@ -1,5 +1,12 @@
 @model AddGoodModel
 
+<div class="container">
+    <div class="row">
+    <div class="col-md-3">
+        @Html.Partial("AdminMenu")
+    </div>
+    
+    <div class="col-md-9">
     <form asp-action="AddGood" asp-controller="Admin" method="post">
         <div asp-validation-summary=" All" class="text-danger"></div>
   <div class="form-group">
@@ -18,3 +25,5 @@
 
   <button type="submit" class="btn btn-primary">Добавить</button>
 </form>
+</div>
+
