--- a/Views/Admin/Edit.cshtml
+++ b/Views/Admin/Edit.cshtml
@@ -1,5 +1,13 @@
 @model AddGoodModel
 
+<div class="container">
+    <div class="row">
+    <div class="col-md-3">
+        @Html.Partial("AdminMenu")
+    </div>
+    
+    <div class="col-md-9">
+
 <form asp-action="EditGood" asp-controller="Admin" method="post">
         <div asp-validation-summary=" All" class="text-danger"></div>
   <div class="form-group">
@@ -22,3 +30,5 @@
 
   <button type="submit" class="btn btn-primary">Изменить</button>
 </form>
+
+</div>
