--- a/Views/Checkout/Credintals.cshtml
+++ b/Views/Checkout/Credintals.cshtml
@@ -4,6 +4,7 @@
 
     <form asp-action="Credintals" asp-controller="Checkout">
   <div class="form-group">
+    <div asp-validation-summary=" All" class="text-danger"></div>
     <label asp-for="Email">Email адрес</label>
     <input type="email" class="form-control" asp-for="Email" aria-describedby="emailHelp" placeholder="Enter email">
   </div>
