--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,20 +1,32 @@
-﻿ @model IEnumerable<Good>
+﻿ @model List<Good>
+     @{
+         int inLine = 2;
+     }
+
 
     <html>
     <head>
     </head>
     <body>
    
+
+
         <div class="container">
             <div class="row">
                
                 <div class="col-sm-12">
-                       
-                    @foreach(var p in Model) 
-                    {                      
-                        @Html.Partial("ProductSummary",p);
-                    }
-               
+                       @for(int i=0;i<Model.Count();i+=inLine)
+                       {
+                           <div class="card-deck">
+                           @for(int j=0;j<inLine && j+i<Model.Count();j++)
+                           {
+                               @Html.Partial("ProductSummary", @Model[j+i]);
+                           }
+                        
+                           </div>
+                           
+                       }
+
 
                 </div>
             </div>
