--- a/Views/Shared/ProductSummary.cshtml
+++ b/Views/Shared/ProductSummary.cshtml
@@ -1,27 +1,48 @@
 @model Good
+@inject ICartService cart
 
-    <div class="card bg-white border-primary " style="margin:5px" >
-        <div class="card-body">
-
-            <h3 class="card-title text-primary">@Model.Name
-                      <small class="badge-pill badge-warning" style="float:right; margin-top:7px" >@Model.Price.ToString("c")</small>
-                      <hr>
-              
-            </h3>
-            <h6 class="card-subtitle">
-                    @Model.Description
-            </h6>
-           <div>
-               
-               <form id="@Model.GoodId" method="post" asp-for="Good" asp-controller="Cart" asp-action="AddToCart">
-                   <input type="hidden" asp-for="GoodId" >
-                <button class="btn btn-primary" style="float:right">
-                    Добавить в корзину
-                </button>
-                </form>
-           </div>
+   
+    
+    <div class="card border-primary" style="margin:5px">
+        <div class="bkg" style="background-image:url(@Model.ImgPath)">
 
         </div>
+        <div class="card-body">     
+            
+            <h4 class="card-title text-primary">@Model.Name
+                      <small class="badge badge-warning" style="float:right; margin-top:7px" >@Model.Price.ToString("c")</small>
+                      <hr>
+              
+            </h4>
+
+            <p class="card-text  text-dark">
+                    @Model.Description
+            </p>         
+
+        </div>
+         <div class="card-footer">
+               <form id="@Model.GoodId" method="post" asp-for="Good" asp-controller="Cart" asp-action="AddToCart">
+                   <input type="hidden" asp-for="GoodId" >
+
+                @{
+                    string bgColor = "btn-outline-primary";
+                    string Caption = "Добавить в корзину";
+                }
+                @if(cart.IsInCart(Model))
+                {
+                    bgColor = "btn-success";
+                    Caption = "Добавлено " + cart.GetCount(Model);
+                }
+
+
+                
+                
+                    <button class="btn @bgColor " style="float:right; width=100px;">
+                        @Caption
+                    </button>
+                
+                </form>
+                </div>
     </div>
   
 
