--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -15,3 +15,18 @@
       
 
 }
+
+.crr
+{
+
+    border-color: aqua;
+    transition: cubic-bezier(0.645, 0.045, 0.355, 1);
+    transition-property: border-color;
+    
+    
+}
+.crr:hover
+{
+    border-color:red;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5); 
+}
