--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,20 +1,26 @@
 ﻿ @model List<Good>
      @{
-         int inLine = 2;
+         int inLine = 3;
      }
 
 
     <html>
-    <head>
+    <head> 
     </head>
-    <body>
-   
-
-
-        <div class="container">
+    <body id="container">
+        <div class="container" >
             <div class="row">
                
-                <div class="col-sm-12">
+               <div class="col-sm-2">
+
+                      @await Component.InvokeAsync("NavigationMenu")               
+                  
+                </ul>
+
+               </div>
+                <div class="col-sm-10">
+                    @if(Model.Count>0)
+                    {
                        @for(int i=0;i<Model.Count();i+=inLine)
                        {
                            <div class="card-deck">
@@ -26,10 +32,15 @@
                            </div>
                            
                        }
+                    }
+                    else{
+                        <h2>Таких нету</h2>
+                    }
 
 
                 </div>
             </div>
     </body>
+
 
     </html>
