--- a/Views/Admin/Goods.cshtml
+++ b/Views/Admin/Goods.cshtml
@@ -1,12 +1,13 @@
 @model IRepository
 
-<div class="container">
+
     <div class="row">
-    <div class="col-md-3">
+        <div class="col-lg-2"></div>
+    <div class="col-lg-1">
         @Html.Partial("AdminMenu")
     </div>
     
-    <div class="col-md-9">
+    <div class="col-lg-7">
     
     <ul class="nav justify-content-center">
   <li class="nav-item">
@@ -20,4 +21,3 @@
     }
     </div>
     </div>
-</div>
