--- a/Views/Admin/Orders.cshtml
+++ b/Views/Admin/Orders.cshtml
@@ -1,11 +1,12 @@
 @model List<ClientAndGoods>
 
-<div class="container">
-    <div class="row">
-    <div class="col-md-3">
+<div class="row">
+        <div class="col-lg-2"></div>
+    <div class="col-lg-1">
         @Html.Partial("AdminMenu")
     </div>
     
+    <div class="col-lg-7">
 
     <div class="col-md-9">
     <br>
@@ -50,4 +51,3 @@
    
     </div>
     </div>
-</div>
