--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,22 +3,15 @@
          int inLine = 3;
      }
 
-
-    <html>
-    <head> 
-    </head>
-    <body id="container">
-        <div class="container" >
-            <div class="row">
-               
-               <div class="col-sm-2">
+                <div class="row">
+               <div class="col-lg-1">
 
                       @await Component.InvokeAsync("NavigationMenu")               
                   
                 </ul>
 
                </div>
-                <div class="col-sm-10">
+                <div class="col-lg-10" id="cards">
                     @if(Model.Count>0)
                     {
                        @for(int i=0;i<Model.Count();i+=inLine)
@@ -39,8 +32,6 @@
 
 
                 </div>
-            </div>
-    </body>
-
-
-    </html>
+       </div>
+    
+  
