--- a/Views/Shared/ProductSummary.cshtml
+++ b/Views/Shared/ProductSummary.cshtml
@@ -1,9 +1,11 @@
 @model Good
 @inject ICartService cart
 
+
+
     
-    <div class="card  border-primary crr" style="margin:5px">
-        <div class="bkg" name="w" style="background-image:url(@Model.ImgPath)">
+    <div class="card  border-primary crr" style="margin:5px" name="aa">
+        <div class="bkg" id="card" name="w" style="background-image:url(@Model.ImgPath)">
 
         </div>
         <div class="card-body">     
@@ -33,12 +35,9 @@
                 }
                 @if(cart.IsInCart(Model))
                 {
-                    bgColor = "btn-success";
+                    bgColor = "btn-primary";
                     Caption = "Добавлено " + cart.GetCount(Model);
                 }
-
-
-                
                 
                     <button class="btn @bgColor " style="float:right; width=100px;">
                         @Caption
@@ -47,6 +46,6 @@
                 </form>
                 </div>
     </div>
-  
 
+   
     
