--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -59,11 +59,11 @@
 
 
         <div class="row" >
-          <div class="col-md-1"></div>
-        <div class="col-md-10">
+          <div class="col-lg-1"></div>
+        <div class="col-lg-10">
     @RenderBody()
     </div>
-    <div class="col-md-1"></div>
+    <div class="col-lg-1"></div>
     <br>
     </div>
     
