--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
 
         <!-- <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" /> -->
         <link rel="stylesheet" href="~/lib/bootstrap/scss/bootstrap.css" />
+        <script src="~/lib/jquery/dist/jquery.js"></script>
         
         
          
