--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,18 +1,26 @@
 @model LoginModel
 
+
+<div class="container">
+
+  <div class="col-md-6"></div>
+  <div class="col-md-6">
+
     <form asp-action="Login" asp-controller="Account" method="post">
+
      
-     
- <div asp-validation-summary="All" style="margin: 5px"></div>
-  <div class="form-group">
-    <label asp-for="Email">Email</label>
-    <input type="text" class="form-control" asp-for="Email" aria-describedby="emailHelp" placeholder="Enter Email">
+     <div asp-validation-summary="All" style="margin: 5px"></div>
+      <div class="form-group">
+        <label asp-for="Email">Email</label>
+        <input type="text" class="form-control" asp-for="Email" aria-describedby="emailHelp" placeholder="Enter Email">
+      </div>
+      <div class="form-group">
+        <label>Password</label>
+        <input class="form-control" placeholder="Inser password" asp-for="Password" type="text">
+      </div>
+
+      <button type="submit" class="btn btn-primary">Submit</button>
+
+    </form>
   </div>
-  <div class="form-group">
-    <label>Password</label>
-    <input class="form-control" placeholder="Inser password" asp-for="Password" type="text">
 </div>
-
-
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
